--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.18.1",
     "react-iframe": "^1.8.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
